task list section were added

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <section id="section-1">
             <div class="task-manager-panel">
                 <div class="task-list">
-                    <p>change car oil</p>
-                    <button>edit</button>
-                    <button>complete</button>
+                    <p id="task">change car oil</p>
+                    <button class="task-list-btn"> edit</button>
+                    <button class="task-list-btn">complete</button>
                 </div>
 
 
